Fall 2014 syllabi as submitted for review

--- a/BSTH/1013.tex
+++ b/BSTH/1013.tex
@@ -8,7 +8,7 @@
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
-\coursecode[7.0]{BSTH 1013}
+\coursecode[7.0-WIP]{BSTH 1013}
 \coursetitle{Old Testament Scripture}
 
 \professor{Daniel R. Driver}
