--- a/BSTH/3143.tex
+++ b/BSTH/3143.tex
@@ -100,21 +100,20 @@ this course is therefore to gain some historical perspective on how the
 Psalter has fed and informed Jewish and Christian faith in various
 periods: in biblical times, Rabbinic and Patristic periods, the Middle
 Ages, the Reformation, the Enlightenment, and finally the early and late
-modern periods. Informed by recent research into the shape and shaping
-of the Psalter we will also consider the arrangement of this great
-anthology.
+modern periods. By interacting with recent research into the shape and
+shaping of the Psalter we will also consider the anthology's arrangement.
 
 The course meets twice a week, which facilitates two main foci. Mondays
 are dedicated to hermeneutical and historical factors involved in
-reading the Psalter in light of long reception. Thursdays allow us to
-put theory into practice by reading particular psalms in the context of
-their reception. By the end of the course students should be able to:
+reading and understanding the Psalter. Thursdays allow us to put theory
+into practice by reading particular psalms in connection with their
+reception history. By the end of the course students should be able to:
 interpret at least four distinct periods in the reception of the
 Psalter; analyze key differences between ancient and modern
 interpreters, and a variety of Jewish and Christian interpreters;
-produce a sustained discussion of a psalm that interacts with its text
-and interpretation; recite at least ten verses of a psalm; respond
-creatively to a psalm in a way that demonstrates awareness of its impact.
+interpret a psalm afresh while interacting with its past readers; recite
+at least twelve verses of a psalm from memory; respond creatively to a
+psalm in a way that demonstrates awareness of its impact.
 
 \section{Required Texts \& Materials}
 \label{texts}
@@ -146,12 +145,15 @@ material; then again, students who choose not to read it should not
 expect to get an A for the course.
 
 \begin{enumerate}
- \item Katharine Dell, “\href{http://ezproxy.mytyndale.ca:2048/login?url=http://www.oxfordhandbooks.com/view/10.1093/oxfordhb/9780199204540.001.0001/oxfordhb-9780199204540-e-4}{Psalms},” pages 37--51 in M. Lieb et al., eds., \emph{The Oxford Handbook of the Reception History of the Bible} (Oxford: Oxford University Press, 2011).
+ \item Katharine Dell, “Psalms,” pages 37--51 in M. Lieb et al., eds., \emph{The Oxford Handbook of the Reception History of the Bible} (Oxford: Oxford University Press, 2011). [\href{http://ezproxy.mytyndale.ca:2048/login?url=http://www.oxfordhandbooks.com/view/10.1093/oxfordhb/9780199204540.001.0001/oxfordhb-9780199204540-e-4}{online}]
  \item James Kugel, “The Psalms of David,” pages 458–473 in \emph{How to Read the Bible: A Guide to Scripture, Then and Now} (New York/Toronto: Free Press, 2007).
+ \item Michael Cameron, ``Hearing Voices: Christ at Prayer `in the Psalm and on the Cross,'\,'' pages 164--212 in \emph{Christ Meets Me Everywhere: Augustine's Early Figurative Exegesis} (Oxford: Oxford University Press, 2012).
+ \item C.\,S. Lewis, ``\,`Sweeter than Honey,'\,'' pages 54--65 in \emph{Reflections on the Psalms} (London: Geoffrey Bles, 1958).
+ \item Alan Cooper, ``Ps 24:7-10: Mythology and Exegesis,'' \emph{Journal of Biblical Literature} 102/1 (1983): 37--60. [\href{http://www.jstor.org/stable/3260745}{online}]
  \item Rolf Rendtorff, “The Psalms of David: David in the Psalms,” pages 53–64 in P. Flint and P.~Miller, eds., \emph{The Book of Psalms} (Leiden: Brill, 2005).
  \item Hermann Gunkel, “The Religion of the Psalms,” pages 134–167 in \emph{Water for a Thirsty Land} (Minneapolis: Fortress, 2001). German original published in 1922.
  \item Hans-Joachim Kraus, “The Psalms in the New Testament,” pages 177–203 in \emph{Theology of the Psalms} (Minneapolis: Augsburg, 1986). German original published in 1979.
- \item Brevard Childs, “Psalm 8 in the Context of the Christian Canon,” pages 151–163 in \emph{Biblical Theology in Crisis} (Philadelphia: Westminster, 1970).
+ \item Brevard Childs, “Psalm Titles and Midrashic Exegesis,” \emph{Journal of Semitic Studies} 16/2 (1971): 137--150. See also his “Psalm 8 in the Context of the Christian Canon,” pages 151–163 in \emph{Biblical Theology in Crisis} (Philadelphia: Westminster, 1970).
  \item John O’Keefe, “‘A Letter that Killeth’: Toward a Reassessment of Antiochene Exegesis, or Diodore, Theodore and Theodoret on the Psalms,” \emph{Journal of Early Christian Studies} 8/1 (2000): 83–104.
  \item Jonathan Magonet, “Through Rabbinic Eyes: Psalm 23,” pages 47–61 in \emph{A Rabbi Reads the Psalms} (2nd ed.; London: SCM, 2004).
  \item Gerald Wilson, “Shaping the Psalter: A Consideration of Editorial Linkage in the Book of Psalms,” pages 72–82 in J.\,C. McCann, ed., \emph{The Shape and Shaping of the Psalter} (JSOTSup 159; Sheffield: Sheffield Academic Press, 1993).
@@ -187,16 +189,17 @@ expect to get an A for the course.
    quiz}. These are designed to ensure that you have read the assigned
    material carefully. Quizzes given in class may not be made up in the
    case of absence, though in special cases they may be taken in advance.
- \item Students are to \textbf{memorize 10 verses of a psalm} and recite
+ \item Students are to \textbf{memorize 12 verses of a psalm} and recite
    it to me privately, in my office, before the end of tenth week of
    class. Any psalm is allowed unless you have memorized it before
    (Psalm 8 is therefore excluded for many).
  \item Students must \textbf{creatively represent one psalm} in the class
    immediately following that psalm’s workshop (e.g., Psalm 1 at the
-   start of Week 3). You can and should use visuals, audio---or whatever
-   you can find or create yourself. Be inventive! The only conditions
-   are (a) that you explain / demonstrate a connection with the text
-   studied and (b) that your presentation last between 5 and 10 minutes.
+   start of Week 3). Engage as many of the senses as possible, using
+   whatever you can find or create. Be inventive! The only conditions
+   are (a) that you explain or demonstrate a connection with the text
+   studied and (b) that your presentation last between 5 and 8 minutes
+   (plus 2 minutes for questions).
  \item The last day of each week (Thursdays unless the only class is on
    Monday) will be devoted to a \textbf{seminar-style discussion} of
    individual psalms. Each student will be assigned a commentator for a
@@ -219,15 +222,15 @@ expect to get an A for the course.
        your unique commentator’s views to the class.
 	\end{enumerate}
  \item In lieu of a final exam students are to \textbf{compose an essay}
-   on one of the psalms we workshop. Consult all the perspectives
-   brought to bear in the seminar on the psalm of your choice, and
-   incorporate as many as are expedient for your discussion. The aim is
-   to dig deeper into one psalm. This will be facilitated in part by the
-   preliminary researches of your classmates. You will need to read more
-   widely on your own, however; the seminar is only a starting point.
-   You are also expected to develop a strong thesis, and to interact
-   significantly with the secondary reading. The final paper will be due
-   at the start of the exam period (TBA).
+	   on one of the psalms we workshop. Consult all the perspectives
+	   brought to bear in the seminar on the psalm of your choice, and
+	   incorporate as many as are expedient for your discussion. The aim
+	   is to dig deeper into one psalm. This will be aided by the
+	   preliminary researches of your classmates, but you will need to
+	   read more widely on your own; the seminar is only a starting
+	   point. You are also expected to develop a strong thesis, and to
+	   interact significantly with the secondary reading. The final
+	   paper will be due at the start of the exam period (TBA).
 
 \end{enumerate}
 
@@ -237,9 +240,9 @@ The breakdown for the semester's total work is as follows:
   \centering
   \begin{tabular}{lr}
     \toprule
-    Reading Quizzes         & 30\% \\
+    Reading Quizzes         & 25\% \\
     Psalm Memorization      & 10\% \\
-    Creative Representation & 10\% \\
+    Creative Representation & 15\% \\
     Seminar Contributions   & 20\% \\
     Final Paper             & 30\% \\
     \bottomrule
@@ -293,13 +296,13 @@ to suit the needs of the class.
           & Psalm 1      & pp. 5--27    & Ch. 1          & 8, 11 Sep.  \\
           & Psalm 2      & pp. 28--55   & Ch. 2          & 15, 18 Sep. \\
           & Psalm 19     & pp. 55--76   & Ch. 3          & 22, 25 Sep. \\
-          & Psalm 23     & pp. 77--104  & Ch. 4          & 29 Sep., 2 Oct. \\
-          & Psalm 24     & pp. 104--130 & Ch. 5          & 6, 9 Oct.   \\
+          & Psalm 22     & pp. 77--104  & Ch. 4          & 29 Sep., 2 Oct. \\
+          & Psalm 23     & pp. 104--130 & Ch. 5          & 6, 9 Oct.   \\
     \noclass{Thanksgiving}                               & 13 Oct.     \\
-          & Psalm 51     & pp. 131--162 &                & 16 Oct.     \\
-          & Psalm 73     & pp. 163--191 &                & 20 Oct.     \\
+          & Psalm 24     & pp. 131--162 &                & 16 Oct.     \\
+          & Psalm 51     & pp. 163--191 &                & 20 Oct.     \\
     \noclass{Reading Days}                               & 23--24 Oct. \\
-          & Psalm 88     & pp. 192--215 & Ch. 6          & 27, 30 Oct. \\
+          & Psalm 73     & pp. 192--215 & Ch. 6          & 27, 30 Oct. \\
           & Psalm 90     & pp. 215--241 & Ch. 7          & 3, 6 Nov.   \\
           & Psalm 110    & pp. 242--266 & Ch. 8          & 10, 13 Nov. \\
           & Psalm 116    & pp. 266--290 & Ch. 9          & 17, 20 Nov. \\
@@ -417,7 +420,7 @@ to text, translation and commentary.
   \end{enumerate}
 \end{enumerate}
 
-\noindent Other Notable Literature
+\noindent Other Notable Literature on the Psalms and Reception History
 
 \begin{itemize}
 
